@@ -49,15 +49,11 @@ import ffx.potential.ForceFieldEnergyOpenMM.Context;
 import ffx.potential.ForceFieldEnergyOpenMM.State;
 import ffx.potential.MolecularAssembly;
 
+import ffx.potential.UnmodifiableState;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Random;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
-
-import ffx.potential.extended.ExtendedSystem;
-import org.apache.commons.configuration2.CompositeConfiguration;
 
 /**
  * Runs Molecular Dynamics using OpenMM implementation
@@ -81,7 +77,7 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
   private boolean running;
   /** Run time. */
   private long time;
-  /** Obtain all variables with each update (i.e. include velocities, gradients). */
+  /** Obtain all variables with each update (i.e., include velocities, gradients). */
   private boolean getAllVars = true;
   /**
    * Method to run on update for obtaining variables. Will either grab everything (default) or
@@ -91,24 +87,18 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
 
   /**
    * Constructs an MolecularDynamicsOpenMM object, to perform molecular dynamics using native OpenMM
-   * routines, avoiding the cost of communicating coordinates, gradients, and energies back and
-   * forth across the PCI bus.
+   * routines, avoiding the cost of communicating coordinates, gradients, and energies back and forth
+   * across the PCI bus.
    *
    * @param assembly MolecularAssembly to operate on
    * @param potential Either a ForceFieldEnergyOpenMM, or a Barostat.
-   * @param properties Associated properties
    * @param listener a {@link ffx.algorithms.AlgorithmListener} object.
    * @param thermostat May have to be slightly modified for native OpenMM routines
    * @param integrator May have to be slightly modified for native OpenMM routines
    */
-  public MolecularDynamicsOpenMM(
-      MolecularAssembly assembly,
-      Potential potential,
-      CompositeConfiguration properties,
-      AlgorithmListener listener,
-      ThermostatEnum thermostat,
-      IntegratorEnum integrator) {
-    super(assembly, potential, properties, listener, thermostat, integrator);
+  public MolecularDynamicsOpenMM(MolecularAssembly assembly, Potential potential,
+      AlgorithmListener listener, ThermostatEnum thermostat, IntegratorEnum integrator) {
+    super(assembly, potential, listener, thermostat, integrator);
 
     logger.info("\n Initializing OpenMM molecular dynamics.");
 
@@ -117,77 +107,59 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
     List<Potential> potentialStack = new ArrayList<>(potential.getUnderlyingPotentials());
     potentialStack.add(potential);
 
-    List<ForceFieldEnergyOpenMM> feOMM =
-        potentialStack.stream()
-            .filter((Potential p) -> p instanceof ForceFieldEnergyOpenMM)
-            .map((Potential p) -> (ForceFieldEnergyOpenMM) p)
-            .collect(Collectors.toList());
-    if (feOMM.size() != 1) {
-      logger.severe(
-          format(
-              " Attempting to create a MolecularDynamicsOpenMM with %d OpenMM force field energies: this presently only allows one!",
-              feOMM.size()));
+    List<ForceFieldEnergyOpenMM> energyList = potentialStack.stream()
+        .filter((Potential p) -> p instanceof ForceFieldEnergyOpenMM)
+        .map((Potential p) -> (ForceFieldEnergyOpenMM) p).toList();
+    if (energyList.size() != 1) {
+      logger.severe(format(
+          " Attempted to create a MolecularDynamicsOpenMM with %d ForceFieldEnergyOpenMM instances.",
+          energyList.size()));
     }
-    forceFieldEnergyOpenMM = feOMM.get(0);
+    forceFieldEnergyOpenMM = energyList.get(0);
 
-    List<Barostat> barostats =
-        potentialStack.stream()
-            .filter((Potential p) -> p instanceof Barostat)
-            .map((Potential p) -> (Barostat) p)
-            .collect(Collectors.toList());
-    if (barostats.isEmpty()) {
+    List<Barostat> barostatList = potentialStack.stream()
+        .filter((Potential p) -> p instanceof Barostat).map((Potential p) -> (Barostat) p).toList();
+    if (barostatList.isEmpty()) {
       constantPressure = false;
-    } else if (barostats.size() > 1) {
+    } else if (barostatList.size() > 1) {
       logger.severe(
-          format(
-              " Attempting to create a MolecularDynamicsOpenMM with %d barostats: this presently only allows 0-1!",
-              barostats.size()));
+          format(" Attempting to create a MolecularDynamicsOpenMM with more than 1 barostat (%d).",
+              barostatList.size()));
     } else {
-      barostat = barostats.get(0);
+      barostat = barostatList.get(0);
       barostat.setActive(false);
     }
 
-    // Update set active and inactive atoms.
+    // Update the set of active and inactive atoms.
     forceFieldEnergyOpenMM.setActiveAtoms();
 
     thermostatType = thermostat;
     integratorType = integrator;
     integratorToString(integratorType);
-
-    // Pseudo-random number generator used to seed the OpenMM velocity generator method.
-    Random random = new Random();
-    if (properties.containsKey("velRandomSeed")) {
-      random.setSeed(properties.getInt("velRandomSeed", 0));
-    } else {
-      random.setSeed(0);
-    }
   }
 
   /**
    * {@inheritDoc}
    *
-   * <p>Start sets up context, write out file name, restart file name, sets the integrator and
-   * determines whether the simulation is starting out from a previous molecular dynamics run (.dyn)
-   * or if the initial velocities are determined by a Maxwell Boltzmann distribution. This method
-   * then calls methods openMMUpdate and takeOpenMMSteps to run the molecular dynamics simulation.
+   * <p>Execute <code>numSteps</code> of dynamics using the provided <code>timeStep</code> and
+   * <code>temperature</code>. The <code>printInterval</code> and <code>saveInterval</code>
+   * control logging the state of the system to the console and writing a restart file, respectively.
+   * If the <code>dyn</code> File is not null, the simulation will be initialized from the contents.
+   * If the <code>iniVelocities</code> is true, the velocities will be initialized from a Maxwell
+   * Boltzmann distribution.
    */
   @Override
-  public void dynamic(
-      long numSteps,
-      double timeStep,
-      double printInterval,
-      double saveInterval,
-      double temperature,
-      boolean initVelocities,
-      File dyn) {
+  public void dynamic(long numSteps, double timeStep, double printInterval, double saveInterval,
+      double temperature, boolean initVelocities, File dyn) {
     // Return if already running and a second thread calls the dynamic method.
     if (!done) {
       logger.warning(" Programming error - a thread invoked dynamic when it was already running.");
       return;
     }
 
-    init(numSteps, timeStep, printInterval, saveInterval, fileType, restartInterval,
-        temperature, initVelocities, dyn);
+    // Call the init method.
+    init(numSteps, timeStep, printInterval, saveInterval, fileType, restartInterval, temperature,
+        initVelocities, dyn);
 
     if (intervalSteps == 0 || intervalSteps > numSteps) {
       // Safe cast: if intervalSteps > numSteps, then numSteps must be less than Integer.MAX_VALUE.
@@ -202,10 +174,9 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
 
     // Retrieve starting energy values.
     getOpenMMEnergies();
-    initialKinetic = currentKineticEnergy;
-    initialPotential = currentPotentialEnergy;
-    initialTotal = currentTotalEnergy;
-    initialTemp = currentTemperature;
+
+    // Store the initial state.
+    initialState = new UnmodifiableState(state);
 
     // Check that our context is using correct Integrator, time step, and target temperature.
     forceFieldEnergyOpenMM.createContext(integratorString, dt, targetTemperature, false);
@@ -229,7 +200,7 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
   /**
    * Setter for the field <code>intervalSteps</code>.
    *
-   * @param intervalSteps a int.
+   * @param intervalSteps The number of interval steps.
    */
   @Override
   public void setIntervalSteps(int intervalSteps) {
@@ -244,29 +215,14 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
 
   /** {@inheritDoc} */
   @Override
-  public void init(
-      long numSteps,
-      double timeStep,
-      double loggingInterval,
-      double trajectoryInterval,
-      String fileType,
-      double restartInterval,
-      double temperature,
-      boolean initVelocities,
+  public void init(long numSteps, double timeStep, double loggingInterval, double trajectoryInterval,
+      String fileType, double restartInterval, double temperature, boolean initVelocities,
       File dyn) {
 
-    super.init(
-        numSteps,
-        timeStep,
-        loggingInterval,
-        trajectoryInterval,
-        fileType,
-        restartInterval,
-        temperature,
-        initVelocities,
-        dyn);
+    super.init(numSteps, timeStep, loggingInterval, trajectoryInterval, fileType, restartInterval,
+        temperature, initVelocities, dyn);
 
-    boolean isLangevin = integratorType.equals(IntegratorEnum.STOCHASTIC);
+    boolean isLangevin = IntegratorEnum.isStochastic(integratorType);
 
     ForceFieldEnergyOpenMM.System system = forceFieldEnergyOpenMM.getSystem();
     if (!isLangevin && !thermostatType.equals(ThermostatEnum.ADIABATIC)) {
@@ -275,9 +231,8 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
     }
 
     if (constantPressure) {
-      // Add an isotropic Monte Carlo barostat, or if already present update its target temperature,
-      // pressure
-      // and frequency.
+      // Add an isotropic Monte Carlo barostat.
+      // If it is already present, update its target temperature, pressure and frequency.
       double pressure = barostat.getPressure();
       int frequency = barostat.getMeanBarostatInterval();
       system.addMonteCarloBarostatForce(pressure, targetTemperature, frequency);
@@ -289,6 +244,7 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
       system.addCOMMRemoverForce();
     }
 
+    // Set the current value of lambda.
     forceFieldEnergyOpenMM.setLambda(forceFieldEnergyOpenMM.getLambda());
   }
 
@@ -305,8 +261,8 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
   }
 
   /**
-   * Sets whether or not to obtain all variables (velocities, gradients) from OpenMM, or just
-   * positions and energies.
+   * Sets whether to obtain all variables (velocities, gradients) from OpenMM, or just positions and
+   * energies.
    *
    * @param obtainVA If true, obtain all variables from OpenMM each update.
    */
@@ -348,19 +304,18 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
   /** Load coordinates, box vectors and velocities. */
   private void setOpenMMState() {
     Context context = forceFieldEnergyOpenMM.getContext();
-    context.setOpenMMPositions(x);
+    context.setOpenMMPositions(state.x());
     context.setPeriodicBoxVectors();
-    context.setOpenMMVelocities(v);
+    context.setOpenMMVelocities(state.v());
   }
 
   /** Get OpenMM Energies. */
   private void getOpenMMEnergies() {
-    State state = forceFieldEnergyOpenMM.createState(false, true, false, false);
-    currentPotentialEnergy = state.potentialEnergy;
-    currentKineticEnergy = state.kineticEnergy;
-    currentTotalEnergy = state.totalEnergy;
-    currentTemperature = state.temperature;
-    state.free();
+    State ommState = forceFieldEnergyOpenMM.createState(false, true, false, false);
+    state.setKineticEnergy(ommState.kineticEnergy);
+    state.setPotentialEnergy(ommState.potentialEnergy);
+    state.setTemperature(ommState.temperature);
+    ommState.free();
   }
 
   /** Do some logging of the beginning energy values. */
@@ -395,28 +350,26 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
 
   /** Get OpenMM Energies and Positions. */
   private void getOpenMMEnergiesAndPositions() {
-    State state = forceFieldEnergyOpenMM.createState(true, true, false, false);
-    currentPotentialEnergy = state.potentialEnergy;
-    currentKineticEnergy = state.kineticEnergy;
-    currentTotalEnergy = state.totalEnergy;
-    currentTemperature = state.temperature;
-    state.getPositions(x);
-    state.getPeriodicBoxVectors();
-    state.free();
+    State ommState = forceFieldEnergyOpenMM.createState(true, true, false, false);
+    state.setPotentialEnergy(ommState.potentialEnergy);
+    state.setKineticEnergy(ommState.kineticEnergy);
+    state.setTemperature(ommState.temperature);
+    ommState.getPositions(state.x());
+    ommState.getPeriodicBoxVectors();
+    ommState.free();
   }
 
   /** Get OpenMM energies, positions, velocities, and accelerations. */
   private void getAllOpenMMVariables() {
-    State state = forceFieldEnergyOpenMM.createState(true, true, true, true);
-    currentPotentialEnergy = state.potentialEnergy;
-    currentKineticEnergy = state.kineticEnergy;
-    currentTotalEnergy = state.totalEnergy;
-    currentTemperature = state.temperature;
-    x = state.getPositions(x);
-    state.getPeriodicBoxVectors();
-    v = state.getVelocities(v);
-    a = state.getAccelerations(a);
-    state.free();
+    State ommState = forceFieldEnergyOpenMM.createState(true, true, true, true);
+    state.setPotentialEnergy(ommState.potentialEnergy);
+    state.setKineticEnergy(ommState.kineticEnergy);
+    state.setTemperature(ommState.temperature);
+    ommState.getPositions(state.x());
+    ommState.getPeriodicBoxVectors();
+    ommState.getVelocities(state.v());
+    ommState.getAccelerations(state.a());
+    ommState.free();
   }
 
   /**
@@ -428,34 +381,21 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
    */
   private void updateFromOpenMM(long i, boolean running) {
 
-    double priorPE = currentPotentialEnergy;
+    double priorPE = state.getPotentialEnergy();
 
     obtainVariables.run();
 
-    double defaultDeltaPEThresh = 1.0E6;
-    detectAtypicalEnergy(priorPE, defaultDeltaPEThresh);
-
     if (running) {
       if (i == 0) {
-        logger.log(
-            basicLogging,
-            format(
-                "\n  %8s %12s %12s %12s %8s %8s",
-                "Time", "Kinetic", "Potential", "Total", "Temp", "CPU"));
-        logger.log(
-            basicLogging,
-            format(
-                "  %8s %12s %12s %12s %8s %8s",
-                "psec", "kcal/mol", "kcal/mol", "kcal/mol", "K", "sec"));
-        logger.log(
-            basicLogging,
-            format(
-                "  %8s %12.4f %12.4f %12.4f %8.2f",
-                "",
-                currentKineticEnergy,
-                currentPotentialEnergy,
-                currentTotalEnergy,
-                currentTemperature));
+        logger.log(basicLogging,
+            format("\n  %8s %12s %12s %12s %8s %8s", "Time", "Kinetic", "Potential", "Total", "Temp",
+                "CPU"));
+        logger.log(basicLogging,
+            format("  %8s %12s %12s %12s %8s %8s", "psec", "kcal/mol", "kcal/mol", "kcal/mol", "K",
+                "sec"));
+        logger.log(basicLogging,
+            format("  %8s %12.4f %12.4f %12.4f %8.2f", "", state.getKineticEnergy(),
+                state.getPotentialEnergy(), state.getTotalEnergy(), state.getTemperature()));
       }
       time = logThermoForTime(i, time);
 
@@ -473,26 +413,13 @@ public class MolecularDynamicsOpenMM extends MolecularDynamics {
   private void integratorToString(IntegratorEnum integrator) {
     if (integrator == null) {
       integratorString = "VERLET";
-      logger.info(" No specified integrator, will use Verlet");
+      logger.info(" An integrator was not specified. Verlet will be used.");
     } else {
       switch (integratorType) {
-        case STOCHASTIC:
-          integratorString = "LANGEVIN";
-          break;
-        case VERLET:
-        case VELOCITYVERLET:
-          integratorString = "VERLET";
-          break;
-        case RESPA:
-          integratorString = "RESPA";
-          break;
-        default:
-          integratorString = "VERLET";
-          logger.warning(
-              String.format(
-                  " Integrator %s incompatible with " + "OpenMM MD integration; defaulting to %s",
-                  integratorType, integratorString));
-          break;
+        default -> integratorString = "VERLET";
+        case STOCHASTIC, LANGEVIN -> integratorString = "LANGEVIN";
+        case RESPA, MTS -> integratorString = "MTS";
+        case STOCHASTIC_MTS, LANGEVIN_MTS -> integratorString = "LANGEVIN-MTS";
       }
     }
   }
